_deploy/base/entra-oidc-demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: entra-oidc-demo
  labels:
    app.kubernetes.io/component: entra-oidc-demo
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: entra-oidc-demo
  template:
    metadata:
      name: entra-oidc-demo
      labels:
        app.kubernetes.io/component: entra-oidc-demo
    spec:
      serviceAccountName: entra-oidc-demo
      containers:
        - name: entra-oidc-demo
          image: main.repository.ext.icrc.org/icrc/adsi/entra-oidc-demo:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: '50m'
              memory: '128Mi'
            limits:
              cpu: '200m'
              memory: '512Mi'
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
