_deploy/base/entra-oidc-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: entra-oidc-demo
  labels:
    app.kubernetes.io/component: entra-oidc-demo
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/component: entra-oidc-demo
